beobgrp_site/static/css/beobgrp_site.scss
// Custom Variables
$primary: gold;
$link: darken(yellow, 10%);
$text-strong: white;
$text: white;
$background: black;
$body-background-color: black;

// Navbar
$navbar-background-color: #333;
$navbar-item-color: white;

// Buttons
$button-color: white;
$button-background-color: darken(darkblue, 12%);

$background-opacity: 0.7;

@use "bulma/bulma";

// html, body {
//   background: linear-gradient(rgba(0, 0, 0, $background-opacity), rgba(0, 0, 0, $background-opacity)),
//     url('/static/images/Background_Oststernwarte_1600.jpg') no-repeat center fixed;
//   background-size: cover;
//   color: $text;
// }

.block-h1 {
  @extend .title;
  @extend .is-1;
  color: gold;
}

.block-h2 {
  @extend .title;
  @extend .is-2;
  color: gold;
}

.block-h3 {
  @extend .title;
  @extend .is-3;
  color: gold;
}

.block-h4 {
  @extend .title;
  @extend .is-4;
  color: gold;
}

.block-h5 {
  @extend .title;
  @extend .is-5;
  color: gold;
}


/* Hide the checkbox */
.menu-toggle {
  display: none;
}

/* Default: Menu hidden on mobile */
.navbar-menu {
  display: none;
}

/* When checkbox is checked, show menu */
.menu-toggle:checked ~ .navbar-menu {
  display: block;
}

